Try to fix scale problem on IE

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -570,7 +570,7 @@ header {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -o-transform: scale(1);
-  -ms-transform: scale(1);
+  -ms-transform: scale(1, 1);
   transform: scale(1);
   opacity: 1; }
 
